# etf-portfolio-profiler

./: .gitignore  README.md  repository.md
.github/workflows/: ci.yml  deploy-pages.yml  probe-tiger-access.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/llm/: provider.py
backend/app/services/: analysis.py  storage.py  tiger_collector.py
backend/tests/: conftest.py  test_analysis.py  test_app_smoke.py  test_chat_smoke.py  test_error_response.py  test_provider_tool_calling.py  test_tiger_collect_smoke.py
data/: asset_classification_overrides.json  etf_classification_overrides.json  tiger_etf_review_list.csv
docs/: architecture.md  data-classification.md
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/tests/e2e/: chat-quality-cdp.mjs  ci-mock.spec.ts  local-real-cdp.mjs  local-real.spec.ts
scripts/: dev-tunnel.sh  run-e2e-local-real.sh  run-e2e.sh  start-dev-all.sh  start-dev-tunnel.sh  start-prod.sh  update-prod.sh
