[project]
name = "etf-portfolio-profiler-backend"
version = "0.1.0"
description = "FastAPI backend for ETF Portfolio Profiler"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.12.3",
  "exchange-calendars>=4.13.2",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "pydantic==2.10.5",
  "uvicorn[standard]==0.34.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

